[gd_scene load_steps=9 format=2]

[ext_resource path="res://Art/Fonts/Comfortaa/Comfortaa-VariableFont_wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Config/theme.tres" type="Theme" id=2]
[ext_resource path="res://Config/main_menu_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Art/Sprites/logo_large_color_light.png" type="Texture" id=4]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=5]
[ext_resource path="res://Actors/UI/LevelSelection.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
_selection_menu = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.505882, 0.709804, 0.34902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -224.0
margin_top = 65.5899
margin_right = 224.0
margin_bottom = 146.59
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Game name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="ToolButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -128.488
margin_right = 175.0
margin_bottom = -3.48804
rect_min_size = Vector2( 350, 125 )
__meta__ = {
"_editor_description_": ""
}

[node name="ColorRect" type="ColorRect" parent="Play"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 125 )
mouse_filter = 2
color = Color( 0.74902, 0.854902, 0.45098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Label" parent="Play"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 13.5636
margin_bottom = 3.5636
rect_pivot_offset = Vector2( -1714.79, -482.922 )
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Play"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLevel" type="Label" parent="Play"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 10.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "[Level 100]"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelection" type="ToolButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = 149.473
margin_right = 175.0
margin_bottom = 274.473
rect_min_size = Vector2( 350, 125 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="LevelSelection"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 125 )
mouse_filter = 2
color = Color( 0.74902, 0.854902, 0.45098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Label" parent="LevelSelection"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Level
Selection"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -167.084
margin_bottom = -65.0842
rect_pivot_offset = Vector2( -1714.79, -482.922 )
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Game by Scarounet"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits2" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 436.527
margin_top = -168.072
margin_right = -32.4726
margin_bottom = -66.0723
rect_pivot_offset = Vector2( -1714.79, -482.922 )
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Powered by"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Credits2"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -294.215
margin_top = -11.9424
margin_right = 2238.79
margin_bottom = 1012.06
rect_scale = Vector2( 0.125, 0.125 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits3" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -45.3484
margin_bottom = -13.3484
rect_pivot_offset = Vector2( -1714.79, -482.922 )
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Font by Google"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="LevelSelection" to="." method="_on_LevelSelection_pressed"]
